--- a/src/components/components-css/About.css
+++ b/src/components/components-css/About.css
@@ -2,13 +2,12 @@
     margin-top: 15%;
     display: flex;
     justify-content: space-between;
-    padding: 5%;
+    padding: 2%;
     gap:2%;
 }
 
 .about-content ul{
     display: flex;
-    list-style: circle;
 
 }
  
@@ -16,4 +15,25 @@
     background-color: #819A91;
     color:#EEEFE0;
     padding: 2%;
+}
+
+.about-li ul{
+    display: flex;
+    flex-direction: row;
+}
+@media only screen and (max-width: 600px) {
+    #about{
+        font-size: small;
+        display: flex;
+        flex-direction: column;
+        padding: 6%;
+    }
+    .about-li{
+        padding:1%;
+        display: flex;
+        flex-direction: column;
+    }
+    .about-li ul{
+        flex-direction: column;
+    }
 }
