--- a/src/components/components-css/Contact.css
+++ b/src/components/components-css/Contact.css
@@ -44,3 +44,22 @@ img{
     margin-left: 15%;
     width: 70%;
 }
+@media only screen and (max-width: 600px) {
+    .contact-card{
+        font-size: small;
+        display: flex;
+        flex-direction: column;
+    }
+    .content-card{
+        width:90%;
+    }
+
+
+    .contact-form{
+        width:100%;
+    }
+    .img-card{
+        margin: 0;
+        text-align: center;
+    }
+}
