--- a/src/components/components-css/Hero.css
+++ b/src/components/components-css/Hero.css
@@ -1,5 +1,4 @@
 #hero{
-    display: flex;
     background-color: #EEEFE0;
     color: #819A91;
     align-items: center;
@@ -10,5 +9,19 @@
 }
 
 img{
-    width: 50vh;
+    width: 10vh;
+}
+
+@media only screen and (max-width: 600px) {
+    #hero{
+        padding: 20%;
+        padding-top:90%;
+        font-size:medium;
+        display:flex;
+        flex-direction: column;
+    }
+    img{
+        width: 0vh;
+    }
+    
 }
