--- a/src/components/components-css/Projects.css
+++ b/src/components/components-css/Projects.css
@@ -42,3 +42,26 @@
     box-shadow: 0px 5px 15px #819A91;
 
 }
+
+@media only screen and (max-width: 600px) {
+    #projects{
+        font-size: small;
+        padding: 8%;
+
+    }
+    .cards-projects{
+        display: flex;
+        flex-direction: column;
+        font-size: small;
+    }
+    #project2{
+        margin-top: 5%;
+    }
+    #project3{
+        margin-top: 5%;
+    }
+    img{
+        margin: 0;
+        margin-top: 10px;;
+    }
+}
